<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_talks"
        android:enabled="true"
        android:icon="@drawable/ic_talks"
        android:title="@string/talks"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_contacts"
        android:enabled="true"
        android:icon="@drawable/ic_contacts"
        android:title="@string/contacts"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_find"
        android:enabled="true"
        android:icon="@drawable/ic_find"
        android:title="@string/find"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_mine"
        android:enabled="true"
        android:icon="@drawable/ic_mine"
        android:title="@string/mine"
        app:showAsAction="ifRoom" />
</menu>