<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white">

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_20dp"
            android:background="@color/gray"
            android:gravity="center_vertical"
            android:paddingStart="@dimen/size_10dp"
            android:paddingEnd="@dimen/size_10dp"
            android:text="@string/app_name"
            android:textColor="@color/black"
            android:textSize="@dimen/size_10sp"
            android:visibility="gone" />

        <ImageView
            android:id="@+id/item_img"
            android:layout_width="@dimen/size_40dp"
            android:layout_height="@dimen/size_40dp"
            android:layout_below="@id/title"
            android:layout_margin="@dimen/size_10dp"
            android:src="@drawable/ic_head_3" />

        <ImageView
            android:id="@+id/item_red_point"
            android:layout_width="@dimen/size_10dp"
            android:layout_height="@dimen/size_10dp"
            android:layout_marginStart="@dimen/size_40dp"
            android:layout_marginLeft="@dimen/size_40dp"
            android:layout_marginTop="@dimen/size_10dp"
            android:src="@drawable/right_point"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/item_accept"
            android:layout_width="@dimen/size_50dp"
            android:layout_height="@dimen/size_30dp"
            android:layout_below="@id/title"
            android:layout_alignParentEnd="true"
            android:layout_margin="@dimen/size_15dp"
            android:background="@drawable/button_back"
            android:gravity="center"
            android:maxLines="1"
            android:text="@string/accept"
            android:textColor="@color/black"
            android:textSize="@dimen/size_15sp"
            android:visibility="gone" />

        <TextView
            android:id="@+id/item_name"
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_40dp"
            android:layout_below="@id/title"
            android:layout_margin="@dimen/size_10dp"
            android:layout_toStartOf="@id/item_accept"
            android:layout_toEndOf="@id/item_img"
            android:gravity="start|center"
            android:maxLines="1"
            android:text="@string/demo_title"
            android:textColor="@color/black"
            android:textSize="@dimen/size_15sp" />

    </RelativeLayout>

</androidx.cardview.widget.CardView>