<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".activity.LoginActivity">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/card_back"
            android:orientation="vertical"
            android:padding="@dimen/size_10dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/register"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button_left_check"
                    android:padding="@dimen/size_5dp"
                    android:text="@string/register"
                    android:textColor="@color/black"
                    android:textSize="@dimen/size_10sp" />

                <TextView
                    android:id="@+id/login"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/button_right"
                    android:padding="@dimen/size_5dp"
                    android:text="@string/login"
                    android:textColor="@color/black"
                    android:textSize="@dimen/size_10sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/user_name"
                    android:layout_width="@dimen/size_250dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="@dimen/size_5dp"
                    android:background="@drawable/input_back"
                    android:gravity="center"
                    android:hint="@string/input_user_name"
                    android:padding="@dimen/size_8dp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/gray"
                    android:textSize="@dimen/size_15sp" />

                <EditText
                    android:id="@+id/pass"
                    android:layout_width="@dimen/size_250dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="@dimen/size_5dp"
                    android:background="@drawable/input_back"
                    android:gravity="center"
                    android:inputType="textPassword"
                    android:hint="@string/input_pass"
                    android:padding="@dimen/size_8dp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/gray"
                    android:textSize="@dimen/size_15sp" />

                <Button
                    android:id="@+id/submit"
                    android:layout_width="@dimen/size_100dp"
                    android:layout_height="@dimen/size_30dp"
                    android:layout_gravity="center"
                    android:layout_margin="@dimen/size_10dp"
                    android:background="@drawable/submit_button"
                    android:gravity="center"
                    android:text="@string/register"
                    android:textColor="@color/white"
                    android:textSize="@dimen/size_15sp" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

    <include
        layout="@layout/common_loading"
        android:visibility="invisible" />

</RelativeLayout>