<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="@dimen/size_60dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <ImageView
            android:id="@+id/item_img"
            android:layout_width="@dimen/size_40dp"
            android:layout_height="@dimen/size_40dp"
            android:layout_margin="@dimen/size_10dp"
            android:src="@drawable/ic_head_2" />

        <ImageView
            android:id="@+id/item_red_point"
            android:layout_width="@dimen/size_10dp"
            android:layout_height="@dimen/size_10dp"
            android:layout_marginStart="@dimen/size_40dp"
            android:layout_marginLeft="@dimen/size_40dp"
            android:layout_marginTop="@dimen/size_10dp"
            android:src="@drawable/right_point" />

        <ImageView
            android:id="@+id/item_mark"
            android:layout_width="@dimen/size_20dp"
            android:layout_height="@dimen/size_20dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="@dimen/size_20dp"
            android:layout_marginBottom="@dimen/size_10dp"
            android:src="@mipmap/ic_launcher"
            android:visibility="gone" />

        <TextView
            android:id="@+id/time"
            android:layout_width="@dimen/size_80dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="@dimen/size_5dp"
            android:gravity="center"
            android:maxLines="1"
            android:text="@string/demo_time"
            android:textColor="@color/gray"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_30dp"
            android:layout_marginTop="@dimen/size_5dp"
            android:layout_toStartOf="@id/time"
            android:layout_toEndOf="@id/item_img"
            android:gravity="start|center"
            android:maxLines="1"
            android:text="@string/demo_title"
            android:textColor="@color/black"
            android:textSize="@dimen/size_15sp" />

        <TextView
            android:id="@+id/desc"
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_20dp"
            android:layout_below="@id/title"
            android:layout_toStartOf="@id/time"
            android:layout_toEndOf="@id/item_img"
            android:ellipsize="middle"
            android:gravity="start|center"
            android:maxLength="50"
            android:singleLine="true"
            android:text="@string/demo_desc"
            android:textColor="@color/gray"
            android:textSize="14sp" />

    </RelativeLayout>

</androidx.cardview.widget.CardView>